--- a/themes/ylion/layout/_widget/tagcloud.ejs
+++ b/themes/ylion/layout/_widget/tagcloud.ejs
@@ -1,18 +1,15 @@
 <% if (site.tags.length){ %>
-<li class="widget widget-normal tags">
-  <h3 class="fa fa-tags widget-title"><%= __('tagcloud') %></h3>
-  <div class="tagcloud-content">
-    <% var tagcloud_config = theme.tagcloud_config;%>
-      <%-tagcloud({
-          min_font: tagcloud_config.min_font,
-          max_font: tagcloud_config.max_font,
-          unit: tagcloud_config.unit,
-          amount: tagcloud_config.amount,
-          orderby: tagcloud_config.orderby,
-          color: tagcloud_config.color,
-          start_color: tagcloud_config.start_color,
-          end_color: tagcloud_config.end_color
-      }) %>
+  <div class="widget-wrap">
+    <h3 class="widget-title"><%= __('tagcloud') %></h3>
+    <div class="widget tagcloud">
+        <embed tplayername="SWF" splayername="SWF"
+            type="application/x-shockwave-flash" src="/tagcloud.swf"
+            mediawrapchecked="true" pluginspage="http://www.macromedia.com/go/getflashplayer"
+            id="tagcloudflash" name="tagcloudflash" bgcolor="#f3f3f3"
+            quality="high" wmode="transparent" allowscriptaccess="always"
+            flashvars="tcolor=0xbd1016&amp;tcolor2=0x808080&amp;hicolor=0x0065ff&amp;tspeed=100&amp;distr=true"
+            height="100%" width="100%">
+        </embed>
+    </div>
   </div>
-</li>
-<% } %>
+<% } %> 
