--- a/themes/ylion/layout/_widget/tagcloud.ejs
+++ b/themes/ylion/layout/_widget/tagcloud.ejs
@@ -1,15 +1,10 @@
-<% if (site.tags.length){ %>
-  <div class="widget-wrap">
-    <h3 class="widget-title"><%= __('tagcloud') %></h3>
-    <div class="widget tagcloud">
-        <embed tplayername="SWF" splayername="SWF"
-            type="application/x-shockwave-flash" src="/tagcloud.swf"
-            mediawrapchecked="true" pluginspage="http://www.macromedia.com/go/getflashplayer"
-            id="tagcloudflash" name="tagcloudflash" bgcolor="#f3f3f3"
-            quality="high" wmode="transparent" allowscriptaccess="always"
-            flashvars="tcolor=0xbd1016&amp;tcolor2=0x808080&amp;hicolor=0x0065ff&amp;tspeed=100&amp;distr=true"
-            height="100%" width="100%">
-        </embed>
+<% if (site.tags.length) { %>
+    <div class="widget-wrap">
+        <h3 class="widget-title">Tag Cloud</h3>
+        <div id="myCanvasContainer" class="widget tagcloud">
+            <canvas width="250" height="250" id="resCanvas" style="width=100%">
+                <%- tagcloud() %>
+            </canvas>
+        </div>
     </div>
-  </div>
-<% } %> 
+<% } %>
