--- a/themes/ylion/layout/layout.ejs
+++ b/themes/ylion/layout/layout.ejs
@@ -11,5 +11,8 @@
 </div>
     <%- partial('_partial/after-footer') %>
 
+<script type="text/javascript" charset="utf-8" src="/js/tagcloud.js"></script>
+<script type="text/javascript" charset="utf-8" src="/js/tagcanvas.js"></script>
+
 </body>
 </html>
